--- a/notebooks/User-Overview-Analysis.ipynb
+++ b/notebooks/User-Overview-Analysis.ipynb
@@ -871,7 +871,7 @@
    ],
    "source": [
     "# check for total number of missing values\n",
-    "print(\"Total columns with missing value(s): {}\".format(data.columns.isnull().sum().sum()))"
+    "print('Total columns with missing value(s): {}'.format(data.columns.isnull().sum().sum()))"
    ]
   },
   {
@@ -907,7 +907,7 @@
    ],
    "source": [
     "# columns with missing values\n",
-    "print(\"Columns having missing value(s):{}\".format(data.columns[data.isnull().any()]))"
+    "print('Columns having missing value(s):{}'.format(data.columns[data.isnull().any()]))"
    ]
   },
   {
