--- a/notebooks/User-Overview-Analysis.ipynb
+++ b/notebooks/User-Overview-Analysis.ipynb
@@ -270,7 +270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data Understanding"
+    "### Data Understanding/ Exploration"
    ]
   },
   {
@@ -282,7 +282,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.insert(0,'../scripts/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from data_information import DataInfo # import data_information script\n",
+    "explorer = DataInfo(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -291,19 +311,19 @@
        "(150001, 55)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# size of data\n",
-    "data.shape"
+    "explorer.get_size()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -316,14 +336,21 @@
    ],
    "source": [
     "# number of data points\n",
-    "print(f' There are {data.shape[0]} rows and {data.shape[1]} columns presnet in this data')"
+    "explorer.get_no_datapoints()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columns in the data are: \n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -384,19 +411,19 @@
        " 'Total DL (Bytes)']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# list the 55 column names\n",
-    "data.columns.tolist()"
+    "explorer.get_column_names()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +497,7 @@
    ],
    "source": [
     "# get information about the data\n",
-    "data.info()"
+    "explorer.get_info()"
    ]
   },
   {
@@ -482,9 +509,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Descriptive statistics: \n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -791,14 +825,14 @@
        "[8 rows x 50 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# descriptive statistics of data\n",
-    "data.describe()"
+    "explorer.get_description()"
    ]
   },
   {
@@ -810,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -823,12 +857,12 @@
    ],
    "source": [
     "# check for total number of missing values\n",
-    "print(\"The number of missing value(s): {}\".format(data.isnull().sum().sum()))"
+    "explorer.get_total_missing_values()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -840,13 +874,7 @@
     }
    ],
    "source": [
-    "# percentage of missing values\n",
-    "    \n",
-    "total_cells = np.product(data.shape) # calculate total number of cells in dataframe\n",
-    "total_missing_count = data.isnull().sum().sum() # calculate total number of missing values\n",
-    "\n",
-    "# calculate percentage missing\n",
-    "print('There are', round(((total_missing_count/total_cells) * 100), 2), '%', 'missing values.')"
+    "explorer.get_percentage_missing_values()"
    ]
   },
   {
@@ -858,32 +886,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total columns with missing value(s): 0\n"
-     ]
-    }
-   ],
-   "source": [
-    "# check for total number of missing values\n",
-    "print('Total columns with missing value(s): {}'.format(data.columns.isnull().sum().sum()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Columns having missing value(s):Index(['Bearer Id', 'Start', 'Start ms', 'End', 'End ms', 'Dur. (ms)', 'IMSI',\n",
+      "Columns having missing value(s): Index(['Bearer Id', 'Start', 'Start ms', 'End', 'End ms', 'Dur. (ms)', 'IMSI',\n",
       "       'MSISDN/Number', 'IMEI', 'Last Location Name', 'Avg RTT DL (ms)',\n",
       "       'Avg RTT UL (ms)', 'Avg Bearer TP DL (kbps)', 'Avg Bearer TP UL (kbps)',\n",
       "       'TCP DL Retrans. Vol (Bytes)', 'TCP UL Retrans. Vol (Bytes)',\n",
@@ -907,30 +917,12 @@
    ],
    "source": [
     "# columns with missing values\n",
-    "print('Columns having missing value(s):{}'.format(data.columns[data.isnull().any()]))"
+    "explorer.get_missing_columns()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# define a function data that takes in a dataframe\n",
-    "def missing(data): \n",
-    "    '''a function to check for missing values count and percentage missing'''\n",
-    "    count_missing = data.isnull().sum() # calculate total sum of missing data\n",
-    "    count_missing_percentage= round((data.isnull().sum()*100/len(data))) # multiply sum of missing data by 100 and divide by length of the whole data to calcualte the missing percentage of a column and round up \n",
-    "    missing_column_name= data.columns \n",
-    "    missing_df=pd.DataFrame(zip(count_missing,count_missing_percentage,missing_column_name),\n",
-    "                           columns=['Missing Count', '%Missing', 'ColumnName']) # create a dataframe containing column names, missing count and percent missing\n",
-    "    missing_df = missing_df.set_index('ColumnName') # set missing columns as index\n",
-    "    return missing_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1303,14 +1295,14 @@
        "Total DL (Bytes)                                      1       0.0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# apply fuction on dataframe\n",
-    "missing(data)"
+    "# find percentage of missing values columns\n",
+    "explorer.get_percentage_missing_columns()"
    ]
   },
   {
@@ -1318,6 +1310,86 @@
    "metadata": {},
    "source": [
     "Let us drop columns with more than 30% missing values and then fill up the other columns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Bearer Id</th>\n",
+       "      <th>Start</th>\n",
+       "      <th>Start ms</th>\n",
+       "      <th>End</th>\n",
+       "      <th>End ms</th>\n",
+       "      <th>Dur. (ms)</th>\n",
+       "      <th>IMSI</th>\n",
+       "      <th>MSISDN/Number</th>\n",
+       "      <th>IMEI</th>\n",
+       "      <th>Last Location Name</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Youtube DL (Bytes)</th>\n",
+       "      <th>Youtube UL (Bytes)</th>\n",
+       "      <th>Netflix DL (Bytes)</th>\n",
+       "      <th>Netflix UL (Bytes)</th>\n",
+       "      <th>Gaming DL (Bytes)</th>\n",
+       "      <th>Gaming UL (Bytes)</th>\n",
+       "      <th>Other DL (Bytes)</th>\n",
+       "      <th>Other UL (Bytes)</th>\n",
+       "      <th>Total UL (Bytes)</th>\n",
+       "      <th>Total DL (Bytes)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 55 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Bearer Id, Start, Start ms, End, End ms, Dur. (ms), IMSI, MSISDN/Number, IMEI, Last Location Name, Avg RTT DL (ms), Avg RTT UL (ms), Avg Bearer TP DL (kbps), Avg Bearer TP UL (kbps), TCP DL Retrans. Vol (Bytes), TCP UL Retrans. Vol (Bytes), DL TP < 50 Kbps (%), 50 Kbps < DL TP < 250 Kbps (%), 250 Kbps < DL TP < 1 Mbps (%), DL TP > 1 Mbps (%), UL TP < 10 Kbps (%), 10 Kbps < UL TP < 50 Kbps (%), 50 Kbps < UL TP < 300 Kbps (%), UL TP > 300 Kbps (%), HTTP DL (Bytes), HTTP UL (Bytes), Activity Duration DL (ms), Activity Duration UL (ms), Dur. (ms).1, Handset Manufacturer, Handset Type, Nb of sec with 125000B < Vol DL, Nb of sec with 1250B < Vol UL < 6250B, Nb of sec with 31250B < Vol DL < 125000B, Nb of sec with 37500B < Vol UL, Nb of sec with 6250B < Vol DL < 31250B, Nb of sec with 6250B < Vol UL < 37500B, Nb of sec with Vol DL < 6250B, Nb of sec with Vol UL < 1250B, Social Media DL (Bytes), Social Media UL (Bytes), Google DL (Bytes), Google UL (Bytes), Email DL (Bytes), Email UL (Bytes), Youtube DL (Bytes), Youtube UL (Bytes), Netflix DL (Bytes), Netflix UL (Bytes), Gaming DL (Bytes), Gaming UL (Bytes), Other DL (Bytes), Other UL (Bytes), Total UL (Bytes), Total DL (Bytes)]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 55 columns]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check for duplicate rows\n",
+    "explorer.get_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The data contains no duplicate rows"
    ]
   },
   {
@@ -1329,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1342,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1351,13 +1423,250 @@
        "(150001, 45)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "check if numeric missing values is skew, and fill missing values with mean value else median value if skew"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to fill numeric values\n",
+    "def fill_numeric_values(df,missing_cols: list, acceptable_skewness: float = 5.0)-> pd.DataFrame:\n",
+    "        df_skew_data = df[missing_cols]\n",
+    "        df_skew = df_skew_data.skew(axis=0, skipna=True)\n",
+    "        for i in df_skew.index:\n",
+    "            if(df_skew[i] < acceptable_skewness and df_skew[i] > (acceptable_skewness * -1)):\n",
+    "                value = df[i].mean()\n",
+    "                df[i].fillna(value, inplace=True)\n",
+    "            else:\n",
+    "                value = df[i].median()\n",
+    "                df[i].fillna(value, inplace=True)\n",
+    "\n",
+    "        return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columns having missing value(s): Index(['Bearer Id', 'Start', 'Start ms', 'End', 'End ms', 'Dur. (ms)', 'IMSI',\n",
+      "       'MSISDN/Number', 'IMEI', 'Last Location Name', 'Avg RTT DL (ms)',\n",
+      "       'Avg RTT UL (ms)', 'Avg Bearer TP DL (kbps)', 'Avg Bearer TP UL (kbps)',\n",
+      "       'TCP DL Retrans. Vol (Bytes)', 'TCP UL Retrans. Vol (Bytes)',\n",
+      "       'DL TP < 50 Kbps (%)', '50 Kbps < DL TP < 250 Kbps (%)',\n",
+      "       '250 Kbps < DL TP < 1 Mbps (%)', 'DL TP > 1 Mbps (%)',\n",
+      "       'UL TP < 10 Kbps (%)', '10 Kbps < UL TP < 50 Kbps (%)',\n",
+      "       '50 Kbps < UL TP < 300 Kbps (%)', 'UL TP > 300 Kbps (%)',\n",
+      "       'HTTP DL (Bytes)', 'HTTP UL (Bytes)', 'Activity Duration DL (ms)',\n",
+      "       'Activity Duration UL (ms)', 'Dur. (ms).1', 'Handset Manufacturer',\n",
+      "       'Handset Type', 'Nb of sec with 125000B < Vol DL',\n",
+      "       'Nb of sec with 1250B < Vol UL < 6250B',\n",
+      "       'Nb of sec with 31250B < Vol DL < 125000B',\n",
+      "       'Nb of sec with 37500B < Vol UL',\n",
+      "       'Nb of sec with 6250B < Vol DL < 31250B',\n",
+      "       'Nb of sec with 6250B < Vol UL < 37500B',\n",
+      "       'Nb of sec with Vol DL < 6250B', 'Nb of sec with Vol UL < 1250B',\n",
+      "       'Total UL (Bytes)', 'Total DL (Bytes)'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "missing = explorer.get_missing_columns()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sub-tasks Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Top 10 handsets used by the customers:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Huawei B528S-23A                19752\n",
+       "Apple iPhone 6S (A1688)          9419\n",
+       "Apple iPhone 6 (A1586)           9023\n",
+       "undefined                        8987\n",
+       "Apple iPhone 7 (A1778)           6326\n",
+       "Apple iPhone Se (A1723)          5187\n",
+       "Apple iPhone 8 (A1905)           4993\n",
+       "Apple iPhone Xr (A2105)          4568\n",
+       "Samsung Galaxy S8 (Sm-G950F)     4520\n",
+       "Apple iPhone X (A1901)           3813\n",
+       "Name: Handset Type, dtype: int64"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calculate the top 10 most used handsets\n",
+    "handsets = data['Handset Type'].value_counts()[:10]\n",
+    "handsets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Top 3 handset manufacturers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Apple      59565\n",
+       "Samsung    40839\n",
+       "Huawei     34423\n",
+       "Name: Handset Manufacturer, dtype: int64"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# identify the top 3 handset manufacturers\n",
+    "handset_manu = data['Handset Manufacturer'].value_counts()[:3]\n",
+    "handset_manu"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Top 5 Handset per top 3 Handset Manufacturer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Huawei B528S-23A           19752\n",
+       "Apple iPhone 6S (A1688)     9419\n",
+       "Apple iPhone 6 (A1586)      9023\n",
+       "Apple iPhone 7 (A1778)      6326\n",
+       "Apple iPhone Se (A1723)     5187\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# identify the top 5 Handset per top 3 Handset Manufacturer\n",
+    "df = data.loc[:,['Handset Type','Handset Manufacturer']] # create a dataframe containg all rows from the actual data and select ahndset type and manufacturer columns\n",
+    "value = df.groupby(['Handset Manufacturer', 'Handset Type']).size() # groupby the columns\n",
+    "df_list = pd.Series(dtype='object') # create a pandas series and specify the object datatype\n",
+    "\n",
+    "for h in handset_manu.index:\n",
+    "    df_list = df_list.append(value[h]) # select the top 3 manufacurers\n",
+    "df_list.sort_values(ascending=False)[:5] # sort by top 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Interpretation and Recommendation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analysis from the top 10 most used handsets by customers, shows Huawei, Apple and Samsung models widely used. The top 3 maufacturers of this handsets as expected are the Apple, Samsung and Huawei companies respectfully. The most used handset is Hwawei B528S-23A with 19752 users followed by Apple iPhhones 6S (A1688), 6 (A1586), 7 (A1778) and Se (A1723) ascendingly. \n",
+    "\n",
+    "Since the Huawei B528S-23A handset is most used by customers, making promotions, expanding its features and selling the same phone and its newer version are profitable. It can  also be infered that iPhones are the next widely used handsets and similar marketing ideas can implement to them as well."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Overview of the users’ behavior"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aggregate per user ('MSISDN/Number'), the; number of xDR sessions, session duration, the total download (DL) and upload (UL) data, the total data volume (in Bytes) during this session for each application. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pd.set_option('display.float_format', '{:.2f}'.format)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To_Do:\n",
+    "* add link to variable description\n",
+    "* complete filling missing values\n",
+    "* check for outliers\n",
+    "* EDA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Exploration"
    ]
   },
   {
