--- a/notebooks/User-Overview-Analysis.ipynb
+++ b/notebooks/User-Overview-Analysis.ipynb
@@ -2526,12 +2526,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Successfully Saved!!\n"
+     ]
+    }
+   ],
    "source": [
     "# save clean data \n",
-    "tweets_data.to_csv('../data/model_data.csv', index=False)\n",
+    "data.to_csv('../data/tellco_data.csv', index=False)\n",
     "print('Data Successfully Saved!!')"
    ]
   },
