--- a/notebooks/User-Overview-Analysis.ipynb
+++ b/notebooks/User-Overview-Analysis.ipynb
@@ -2527,7 +2527,9 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -4847,7 +4849,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In terpretations:\n",
+    "Interpretations:\n",
     "* \n",
     "* "
    ]
